--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -3,18 +3,18 @@
     <div class="col-md-6">
         <div class="form-group">
             <label for="pl1">Enter First Player Name</label><br/>
-            <input type="text" name="pl1" ng-model="data.pl1"/>
+            <input type="text" name="pl1" ng-model="data.pl1.name"/>
         </div>
         <div class="form-group">
             <label for="pl2">Enter Second Player Name </label><br/>
 
-            <input type="text" name="pl2" ng-model="data.pl2"/>
+            <input type="text" name="pl2" ng-model="data.pl2.name"/>
         </div>
         <a href="#/game"><button type="button" class="btn btn-primary btn-lg">Start Game</button></a>
     </div>
     <div class="col-md-6">
-        <h1> Player <span class="green">X</span> <span class="plName">{{data.pl1}}</span></h1>
-        <h1>Player <span class="red">O</span> <span class="plName">{{data.pl2}}</span></h1>
+        <h1> Player <span class="green">X</span> <span class="plName">{{data.pl1.name}}</span></h1>
+        <h1>Player <span class="red">O</span> <span class="plName">{{data.pl2.name}}</span></h1>
 
     </div>
 </div>
